# rusty-choc-ice

./: .env.example  .gitignore  Cargo.toml  README.md
src/: dice.rs  main.rs
src/commands/: meta.rs  mod.rs  roll.rs
