[package]
name = "rusty-choc-ice"
version = "0.1.0"
authors = ["Paul Maskelyne <muttley@muttleyville.org>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
lazy_static = "1"
rand = "0.8.0"
regex = "1"
tracing = "0.1.23"
tracing-subscriber = "0.2"

[dependencies.serenity]
version = "0.10"
features = ["cache", "framework", "standard_framework", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]
